fully operational user/admin

--- a/templates/login_form.html
+++ b/templates/login_form.html
@@ -17,7 +17,7 @@ Not yet registered? Reach out to Sophia, Era, or Anindit!</a>
         </tr>
         <tr>
             <td>Password: </td>
-            <td><input type="text" name="password"></input></td>
+            <td><input type="password" name="password"></input></td>
         </tr>    
     </table>
     <input type="submit" value="Log In"></input>
