--- a/templates/user_page.html
+++ b/templates/user_page.html
@@ -8,7 +8,7 @@
             <h3>Hi {{ username }}!</h3>
             <p>
                 <a href="/change_password&={{ username }}" style="color:blue""> Change Password</a> <br/>
-                <a href="/" style="color:blue">Edit Profile</a><br/>
+                <a href="/edit_profile&={{ username }}" style="color:blue">Edit Profile</a><br/>
             </p>
             <a href="/logout" style="color:blue" >Log out</a>
         </center>
