up until assigning oh + calc stats

--- a/templates/add_users.html
+++ b/templates/add_users.html
@@ -7,12 +7,10 @@
     	<h3> Add New Users: </h3>
         Enter the new users in the following format:
         <p>
-        user1, pass1 <br/>
-        user2, pass2 
+        user1<br/>
+        user2<br/> 
         </p>
-        Make sure to put the username, followed with a comma, followed with the password. Don't worry about whitespace on the end of the line/between words, it will be trimmed.<br/>
-        Make sure to make a new line for each user. The form will tell you if there were formatting issues and if the input was succesful. You should double check to see if they were added.<br/>
-        I would recommend making a text document with the input correctly formatted, then copy/pasting it here. This will make life easier if something goes wrong, since the text will dissapear after submission.
+        Please make a new line between each new user. All whitespace in a username will be removed. Don't include commas in usernames, the system will throw an error. 
         <p>
         	<b> Enter new users here:</b>
             <form action = "/try_adding_users"; method = "post">
