--- a/templates/reset_system.html
+++ b/templates/reset_system.html
@@ -6,8 +6,7 @@
     <body>
     <center>
     	<h3>Reset the System</h3>
-        This is not a joke. It cannot be undone, so think very carefully about if you'd like to do this. <br/>
-        If you do this, you will remove every account from the system, and all office-wide statistics that have been collected.<br/>
+        If you do this, you will delete all statistics that have been collected. You should only really need to do this at the beginning of a semester.<br/>
         If you'd like to continue, enter the admin username and password and press reset.
         <p>
         <form action = "/try_reset"; method = "post";>
