--- a/templates/set_magic_key.html
+++ b/templates/set_magic_key.html
@@ -1,27 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Change Password</title>
+        <title>Set Magic Key</title>
     </head>
     <body>
     <center>
-    <h3>Change Password for {{ username }}</h3>
-    <form action = "/try_changing_password&={{ username }}"; method = "post";>
+    <h3>Set Magic Key for {{ username }}</h3>
+    <form action = "/try_setting_magic_key&={{ username }}"; method = "post";>
         <table>
         <tr>
-                <td>Old Password: </td>
-                <td><input type="password" name="old_pass"></input></td>
-            </tr>
-            <tr>
-                <td>New Password: </td>
-                <td><input type="password" name="new_pass"></input></td>
-            </tr>  
-            <tr>
-                <td>New Password, again: </td>
-                <td><input type="password" name="new_pass_x2"></input></td>
-            </tr> 
+            <td>Enter Magic Key: </td>
+            <td><input type="text" name="magic_key" autofocus></input></td>
+        </tr>
         </table>
-        <input type="submit" value="Reset Password"></input>
+        <input type="submit" value="Set Magic Key"></input>
 
     </form>
     <p>
