--- a/templates/user_page.html
+++ b/templates/user_page.html
@@ -6,7 +6,7 @@
     <body>
         <center>
             <h3>Hi {{ username }}!</h3>
-            <p>You will have {{ num_required_hours }} office hours to do. If you think this is a mistake, tell Sophia!</p>
+            <p>You will have <b>{{ num_required_hours }}</b> office hours to do. If you think this is a mistake, tell Sophia!</p>
             <p>
                 <a href="/change_password&={{ username }}" style="color:blue""> Change Password</a> <br/>
                 <a href="/edit_profile&={{ username }}" style="color:blue">Edit Profile</a><br/>
