--- a/templates/login_form.html
+++ b/templates/login_form.html
@@ -24,6 +24,16 @@ Not yet registered? Reach out to Sophia, Era, or Anindit!</a>
 </form>
 </p>
 <p>
+    <i>
+    UI/UX inspiration was drawn from the webpages of Berkeley's finest. A few examples are listed below.
+    <a href="https://people.eecs.berkeley.edu/~hilfingr/" style="color:blue" >Paul Hilfinger</a><br>
+    <a href="https://math.berkeley.edu/~stankova/" style="color:blue" >Zvezdelina Entcheva Stankova</a>
+    <a href="http://www-inst.eecs.berkeley.edu/~cs164/sp19/" style="color:blue">Paul Hilfinger, again</a><br>
+
+    <br>
+    </i>
+</p>
+<p>
 {% with messages = get_flashed_messages() %}
    {% if messages %}
       {% for message in messages %}
