--- a/templates/login_form.html
+++ b/templates/login_form.html
@@ -25,7 +25,7 @@ Not yet registered? Reach out to Sophia, Era, or Anindit!</a>
 </p>
 <p>
     <i>
-    UI/UX inspiration was drawn from the webpages of Berkeley's finest. A few examples are listed below.<br/>
+    Inspiration for UI/UX design was drawn from the webpages of Berkeley's finest. A few examples are listed below.<br/>
     </i>
     <a href="https://people.eecs.berkeley.edu/~hilfingr/" style="color:blue" >Paul Hilfinger</a><br/>
     <a href="https://math.berkeley.edu/~conway/" style="color:blue" >James Conway</a><br/>
