--- a/templates/admin.html
+++ b/templates/admin.html
@@ -8,7 +8,8 @@
     	<h3> Hi Admin! </h3>
         On this page, you will be able to do admin-y stuff.
         <p>
-        	<a href="/user_list" style="color:blue">View Existing Users</a><br/>
+            <a href="/user_list" style="color:blue">View Existing Users</a><br/>
+            <a href="/assign_hours" style="color:blue">View/Edit Assigned Hours</a><br/>
             <a href="/add_users" style="color:blue">Add Users</a><br/>
             <a href="/admin" style="color:blue">View Office Stats<br/></a>
             <a href="/reset_system" style="color:blue">Reset the System</a>
