last step before ilp

--- a/templates/assign_hours.html
+++ b/templates/assign_hours.html
@@ -9,15 +9,7 @@
             }
             table, th, td {
               border: 1px solid black;
-            }
-            th, td {
-                padding: 5px;
-
-            }
-            td {
-              font-size:10px;
-              width: 90;
-              height:30
+              padding: 2px;
             }
             </style>
     <body>
@@ -28,7 +20,7 @@
         1) Each person must do their required number of hours<br/>
         2) For any given slot, there should be at least 3 people but no more than 5. The algorithm will try to maximize slots with 4 assigned people.<br/>
         3) There should be at least 2 people of caseworker/veteran rank in each slot.<br/>
-        4) Veteran caseworkers get slight priority in preferences - namely, the algorithm thinks it is better that 3 veteran caseworkers get their preferred slots, vs 4 caseworkers/new hires<br/>
+        4) Veteran caseworkers get slight priority in preferences - namely, the algorithm thinks it is better that 3 veteran caseworkers get their preferred slots, vs 4 caseworkers/new hires<br/> <br/>
         
         Pressing "Generate Solution, Hard Constraints" will try to stick strongly to the constraints. It is possible that no solution exists, in which case the program will tell you this. <br/>
         In the event of there being no solution, you can press "Generate Solution, Soft Constraints" to generate a solution that satisfies as many constraints as possible, from where you can manually edit it. 
@@ -39,8 +31,14 @@
         <form action="/solve_preferences_soft">
             <input type="submit" value="Generate Solution, Soft Constraints" />
         </form>
+        <br/><br/>
+        You can manually edit the office hour assignments. Don't worry about capitalization or spacing, but be sure to write users in a slot like so:<br/>
+        user1, user2, user3<br/>
+        The form will tell you if there are formatting errors. You can see who is free for any given slot in the chart below (green text implies its a preferred slot).<br/>
+        Once you are done, press Make Assignments.
         <form action = "/try_assigning_hours"; method = "post"; id = "assign_hours">
             <p>
+                <b>Current Assignments</b>
                 <table id = "preference_table">
                     <tr>
                         <th></th>
@@ -53,14 +51,43 @@
                         <th>{{ days_open[i] }}</th>
                         {% for j in range (header_oh_slots|length) %}
                         <td id = "{{ i }}-{{ j }}">
-                            <textarea rows="2" cols="1" name="{{ i }}-{{ j }} text">Anindit, Era, Sophia, Joyce</textarea>
+                            <textarea rows="6" cols="8" name="{{ i }}-{{ j }} text">Anindit, Era, Sophia, Joyce</textarea>
                         </td>
                         {% endfor %}
                     </tr>
                     {% endfor %}    
                 </table>
+                <input type="submit" value="Make Assignments" />
             </p>
         </form>    	
+        <p>
+            <b>Availabilities</b>
+            <table id = "availibilities">
+                <tr>
+                    <th></th>
+                    {% for header in header_oh_slots %}
+                    <th>{{ header }}</th>
+                    {% endfor %}
+                </tr>
+                {%for i in range (days_open|length)%}
+                <tr>
+                    <th>{{ days_open[i] }}</th>
+                    {% for j in range (header_oh_slots|length) %}
+                    <td>
+                        {% for person in slot_availibility[i][j][0] %}
+                            <font color="green"> {{ person }} </font> <br>
+                        {% endfor %}
+                        {% for person in slot_availibility[i][j][1] %}
+                            {{ person }}<br>
+                        {% endfor %}
+            
+                    </td>
+                    {% endfor %}
+                </tr>
+                {% endfor %}    
+            </table>
+            <input type="submit" value="Make Assignments" />
+        </p>
         <p>
             {% with messages = get_flashed_messages() %}
             {% if messages %}
