--- a/templates/assign_hours.html
+++ b/templates/assign_hours.html
@@ -61,7 +61,7 @@
             </p>
         </form>    	
         <p>
-            <b>Availabilities</b>
+            <b>Availabilities (if assigned to a slot, they won't appear as "available")</b>
             <table id = "availibilities">
                 <tr>
                     <th></th>
